kubernetes/web-deployment.yaml
# web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smackweb
  namespace: microsmack
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: docker.io/992220449/smackweb:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: dockerhub-secret
