kubernetes/smackapi-service.yaml
# -------------------------------
# smackapi-service.yaml
# -------------------------------
apiVersion: v1
kind: Service
metadata:
  name: smackapi
  namespace: microsmack
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 8080
